z-index fix

--- a/main.css
+++ b/main.css
@@ -57,7 +57,6 @@ main {
       grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   padding-bottom: 3rem;
   margin-top: 5vh;
-  z-index: -1;
 }
 
 .project {
@@ -158,6 +157,7 @@ main {
   background: #18202d;
   width: 100%;
   height: 2.5rem;
+  z-index: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
